# hamtask

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/hamtask/: __main__.py  app.py  client.py  config.py  models.py  parsing.py  sorting.py
tests/: test_client.py  test_config.py  test_parsing.py  test_sorting.py
