[project]
name = "hamtask"
version = "0.2.0"
description = "A vim-style Taskwarrior TUI built with Textual."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["taskwarrior", "textual", "tui", "task", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "arrow>=1.3",
    "pydantic>=2.0",
    "textual>=0.80",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/lordhamster/hamtask"
Repository = "https://github.com/lordhamster/hamtask"
Issues = "https://github.com/lordhamster/hamtask/issues"

[project.scripts]
hamtask = "hamtask.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
